<resources>

    <string name="app_name">smart wed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_navigation_drawer">admin_navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rizwan Ali</string>
    <string name="nav_header_subtitle">rali726262@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="halldescription">The most well known hall around your locality</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Orders</string>
    <string name="menu_slideshow">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="drop_table_if_exists_orders">DROP table if exists orders</string>
    <string name="name">Name</string>
    <string name="email1">Email</string>
    <string name="password1">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string-array name="numbers">

        <item>Lahore</item>
        <item>Sargodha</item>
        <item>Rawalpindi</item>
        <item>Islamabad</item>
        <item>Sahiwal</item>
    </string-array>
</resources>
